Fixed Spacing issue

--- a/Practice/P2-SASS/styles.scss
+++ b/Practice/P2-SASS/styles.scss
@@ -13,7 +13,7 @@ body {
 }
 
 h1 {
-    font-size: clamp(1.2rem, 4vw, 2rem);
+    font-size: clamp(1.5rem, 4vw, 2rem);
 }
 
 p {
@@ -62,7 +62,7 @@ main {
         height: 10vh;
         padding: 1rem;
         background: #cacaca;
-        @include displayFlex(space-between, center, column);
+        @include displayFlex(center, center, column);
 
         h1 {
             color: rgb(0, 136, 255);
@@ -111,7 +111,7 @@ main {
     }
 
     section {
-        min-height: 70vh;
+        min-height: 50vh;
         width: 100%;
         @include displayFlex(space-around, center, column);
         gap: 20px;
